--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,11 @@
 
 html{
   position: relative;
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 body{
   margin: 0;
@@ -25,6 +30,7 @@ body{
     margin-right: 14px;
   }
 }
+
 
 header {
   padding: 40px;
